--- a/h/hi/hit/hitrecord.org.html
+++ b/h/hi/hit/hitrecord.org.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the hitrecord.org privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621085231id_/http%3A//www.hitrecord.org/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hitrecord.org privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220120103id_/http%3A//www.hitrecord.org/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>hitRECord - privacy</title>
 <meta charset="utf-8">
 <meta content="HITRECORD is an open-collaborative production company, and this website is where we make things together." name="description">
-<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
 <style>
 <!-- * Kevin says: see _new_styles.css.sass */ -->
 body {
@@ -19,20 +19,11 @@ font-weight: normal;
 font-style: normal;
 }
 </style>
-<link href="http://hitrecord_prod.s3.amazonaws.com/assets/application-5649f82bb6d4ccbabe4d3835db943e7d.css" media="screen, projection" rel="stylesheet" type="text/css">
+<link href="//d3q28pkxsyrk9d.cloudfront.net/assets/application-9cb80d812874a12f3bcba6082f337862.css" media="screen, projection" rel="stylesheet" type="text/css">
 <!--[if IE]>
-<link href="http://hitrecord_prod.s3.amazonaws.com/assets/ie-7ce99a0c473ffb365668d812a3a2936f.css" media="screen, projection" rel="stylesheet" type="text/css" />
+<link href="//d3q28pkxsyrk9d.cloudfront.net/assets/ie-fb790b3e3aac38eb1539603bfa566b5a.css" media="screen, projection" rel="stylesheet" type="text/css" />
 <![endif]-->
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="//doug1izaerwt3.cloudfront.net/7bf1b3989bc022cbd049dbae8cb80cf089c9d7f6.1.js"></script><script type="text/javascript" async="" src="//i.kissmetrics.com/i.js"></script><script type="text/javascript">window.username = '';    var _kmq = _kmq || [];
-        function _kms(u){
-          setTimeout(function(){
-            var s = document.createElement('script'); var f = document.getElementsByTagName('script')[0]; s.type = 'text/javascript'; s.async = true;
-            s.src = u; f.parentNode.insertBefore(s, f);
-          }, 1);
-        }
-        _kms('//i.kissmetrics.com/i.js');_kms('//doug1izaerwt3.cloudfront.net/7bf1b3989bc022cbd049dbae8cb80cf089c9d7f6.1.js');
-    _kmq.push(['record', 'unregistered visit']);</script>
-<script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script></head>
+</head>
 <body class="home privacy logged_out">
 <header class="section">
 <div class="inner">
@@ -41,39 +32,34 @@ How can we make our site better for you?
 <a href="http://getsatisfaction.com/hitrecord">Leave feedback</a>.
 </div>
 
-<a href="/" class="header_link selected" id="header_logo"><img alt="Header_logo" class="header_logo" src="http://hitrecord_prod.s3.amazonaws.com/assets/header_logo-77a82eda68dc0b81bdf8143a16f43ece.png">
+<a href="/" class="header_link selected" id="header_logo"><img alt="Header_logo" class="header_logo" src="//d3q28pkxsyrk9d.cloudfront.net/assets/header_logo-2954d02580113774ac3310f3cda73fd0.png">
 </a><nav>
-<a href="/login" class="header_link green" id="join_link">Join</a>
+<a href="/users/sign_up" class="header_link green" id="join_link">Join</a>
 <a href="javascript:showLogin();" class="header_link" id="login_link">Login</a>
 <a href="/featured" class="header_link selected" id="featured_link"><span class="ir">
 Featured
 </span>
 </a><a href="/dashboard" class="header_link " id="dashboard_link">Dashboard</a>
 <a href="/browse" class="header_link " id="browse_link">Browse</a>
-<a href="/store" class="header_link" id="store_link">Store</a>
+<a href="http://store.hitrecord.org" class="header_link" id="store_link">Store</a>
 </nav>
 <a href="/create"><div class="rec_button" id="header_button"></div>
 </a><div id="header_login_fields" style="display: none;">
 <div id="login">
-<form accept-charset="UTF-8" action="http://www.hitrecord.org/login" class="new_user_session" id="new_user_session" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="3m+a5MSqFoNXEuegmyohizFd4YEXgjmY/NqV2A9CRkk="></div>
-<input autocomplete="off" id="user_session_username" name="user_session[username]" placeholder="Username" size="30" type="text">
-<input autocomplete="off" id="user_session_password" name="user_session[password]" placeholder="Password" size="30" type="password">
-<a class="btn tiny highlight alt-text" href="javascript:$('form', $('#login')).submit();" id="login_go">
-<span>Go</span>
-</a>
-</form>
-<div id="other">
-<a href="/password_resets/new">Forgot password?</a>
-/
-<a href="/login">Sign Up</a>
+  <form accept-charset="UTF-8" action="/users/sign_in" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="WsJBnH91E7Y5fU8NpYQKGSRQPu+750Mj5xEtqCJEaDg="></div>
+    <input id="user_username" name="user[username]" placeholder="Username" size="30" type="text">
+    <input id="user_password" name="user[password]" placeholder="Password" size="30" type="password">
+    <input id="user_remember_me" name="user[remember_me]" type="hidden" value="1">
+    <input class="btn tiny highlight alt-text" id="login_go" name="commit" type="submit" value="Go">
+</form>  <div id="other">
+    <a href="/users/password/new">Forgot password?</a> / <a href="/users/sign_up">Sign Up</a>
+  </div>
 </div>
-</div>
-
 </div>
 <div class="right_column">
 <div class="search_bar">
-<img alt="Search_bar_button" class="search_bar_button" onclick="$('.search').submit()" src="http://hitrecord_prod.s3.amazonaws.com/assets/header_v5/search_bar_button-0989bd79ecc79674d96181c9f8faf715.png">
-<form accept-charset="UTF-8" action="/search" class="search" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="3m+a5MSqFoNXEuegmyohizFd4YEXgjmY/NqV2A9CRkk="></div>
+<img alt="Search_bar_button" class="search_bar_button" onclick="$('.search').submit()" src="//d3q28pkxsyrk9d.cloudfront.net/assets/header_v5/search_bar_button-86504834563dc47e6e1468afe60a00ce.png">
+<form accept-charset="UTF-8" action="/search" class="search" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="WsJBnH91E7Y5fU8NpYQKGSRQPu+750Mj5xEtqCJEaDg="></div>
 <input id="search_query" name="search_query" onfocus="clearValue(this);" type="text" value="Search all of hitRECord...">
 <input name="commit" style="display: none;" type="submit" value="Search">
 </form>
@@ -101,7 +87,7 @@ Featured
 <a href="/privacy">Privacy Policy</a>
 </li>
 <li class="">
-<a href="/monetization">Monetization</a>
+<a href="/monetizationterms">Monetization</a>
 </li>
 <li class="">
 <a href="/help">Help</a>
@@ -276,7 +262,7 @@ We may access, preserve, and disclose your Personal Information, other account i
 </p>
 <p>
 <span class="strong">Merger, Sale, or Other Asset Transfers.</span>
-Although we have no present intention to sell hitRECord.org o a third party, take the company public, go into bankruptcy or surrender control of the company, it is always possible that future circumstances may change and result in a change in control, merger, acquisition, financing due diligence, reorganization, bankruptcy, receivership, sale assets, or transition of the Site to another provider. In such an event, your information may be sold or transferred as part of such a transaction as permitted by law and/or contract. The use of your Personal Information following any of the foregoing events should be governed by the provisions of this Privacy Policy in effect at the time such Personal Information was collected.
+Although we have no present intention to sell hitRECord.org to a third party, take the company public, go into bankruptcy or surrender control of the company, it is always possible that future circumstances may change and result in a change in control, merger, acquisition, financing due diligence, reorganization, bankruptcy, receivership, sale assets, or transition of the Site to another provider. In such an event, your information may be sold or transferred as part of such a transaction as permitted by law and/or contract. The use of your Personal Information following any of the foregoing events should be governed by the provisions of this Privacy Policy in effect at the time such Personal Information was collected.
 </p>
 <p>
 <span class="strong">With Consent.</span>
@@ -375,17 +361,8 @@ or by mail at:
 <div id="footer_links">
 <div class="link_stack">
 <ul class="none">
-<li class="title"><a href="/dashboard">dashboard</a></li>
-<li><a href="/users/me">profile</a></li>
-<li><a href="/dashboard/records">reactions to my records</a></li>
-<li><a href="/users/my_records">my records</a></li>
-<li><a href="/users/my_collaborations">my collaborations</a></li>
-</ul>
-</div>
-<div class="link_stack">
-<ul class="none">
 <li class="title"><a href="/browse">browse</a></li>
-<li><a href="/recommended">recently recommended</a></li>
+<li><a href="/browse">recently recommended</a></li>
 <li><a href="/latest">latest records</a></li>
 <li><a href="/beating">most recommended</a></li>
 <li><a href="/greatest">greatest hits</a></li>
@@ -419,31 +396,25 @@ or by mail at:
 <li class="title">legal</li>
 <li><a href="/terms">terms of service</a></li>
 <li><a href="/privacy">privacy policy</a></li>
-<li><a href="/monetization">monetized productions</a></li>
+<li><a href="/monetizationterms">monetized productions</a></li>
 <li><a href="mailto:press@hitrecord.org?body=This email is for press-related media inquiries only. Website support is found under the Help section of the website. Thank you.">Press</a></li>
 </ul>
 </div>
 </div>
-<a href="/"><img alt="Footer_logo" src="http://hitrecord_prod.s3.amazonaws.com/assets/footer_logo-bfbdece5065e2e87c41e46adaa0e9ead.png"></a>
+<a href="/"><img alt="Footer_logo" src="//d3q28pkxsyrk9d.cloudfront.net/assets/footer_logo-2c5db92cb1288d02509dd74085463fa4.png"></a>
 </div>
 </div>
 </footer>
 
-<script src="http://hitrecord_prod.s3.amazonaws.com/assets/application-e5365c25a05178572622b15ed5ceaf29.js" type="text/javascript"></script>
+<script src="//d3q28pkxsyrk9d.cloudfront.net/assets/application-62a5d0c4d3470750ba0f29623562038e.js" type="text/javascript"></script>
 <script>
-  //<![CDATA[
-    $(document).ready(function() {
-      // Turn any timestamp abbr tags into relative timestamp strings
-      window.timeago_interval = window.setInterval(function() {$('abbr.timeago').timeago();},500);
-    
-      window.logged_in = false;
-      window.current_user = new App.Models.User(null);
-      window.items = new App.Collections.Items();
-      window.items.add([]);
-    });
-  //]]>
+  $(document).ready(function() {
+    window.logged_in = false;
+    window.current_user = new App.Models.User(null);
+    window.items = new App.Collections.Items();
+    window.items.add([]);
+  });
 </script>
-
 <div id="modal">
 <div id="modal-message">
 <div class="icon"></div>
@@ -472,16 +443,16 @@ dismiss
 
       </script>
     
-<script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
+<script type="text/javascript">if (typeof NREUMQ !== "undefined") { if (!NREUMQ.f) { NREUMQ.f=function() {
 NREUMQ.push(["load",new Date().getTime()]);
 var e=document.createElement("script");
 e.type="text/javascript";
 e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "rpm-images.newrelic.com/42/eum/rum.js";
+  "js-agent.newrelic.com/nr-100.js";
 document.body.appendChild(e);
 if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-3.newrelic.com","30f60f9ad3","1510228","IQsMREINWV8DQhZaDA8BTUBCC0NSBUk=",11,49,new Date().getTime(),"","","","",""]);</script>
-<script type="text/javascript" src="https://rpm-images.newrelic.com/42/eum/rum.js"></script></body></html>
+NREUMQ.push(["nrfj","beacon-3.newrelic.com","30f60f9ad3","1510228","IQsMREINWV8DQhZaDA8BTUBCC0NSBUk=",9,48,new Date().getTime(),"","","","",""]);}</script>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
