--- a/l/lo/low/lowfares.com.html
+++ b/l/lo/low/lowfares.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lowfares.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621033223id_/http%3A//lowfares.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lowfares.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220122724id_/http%3A//www.lowfares.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
   <title>
@@ -18,7 +18,7 @@
   
   
 
-  <script src="//cdn.lowfares.com/assets/l-4564363577494365520d11adfe0949e3.js" type="text/javascript"></script>
+  <script src="//cdn.lowfares.com/assets/l-b65a809c3ed2bfa039a6b176da69275c.js" type="text/javascript"></script>
 
   <script type="text/javascript">
     I18n.defaultLocale = "en";
@@ -27,7 +27,7 @@
 
 
   <meta content="authenticity_token" name="csrf-param">
-<meta content="y1iyOgWDgXoKtmmgz7pcROkrU0nEqiEWd+DG9uIR9CM=" name="csrf-token">
+<meta content="jd8Hna7COs02359cHj/0DyamwACbgT+n+PUvHuwBUz4=" name="csrf-token">
 	
 </head>
 
@@ -533,7 +533,6 @@ Los Angeles, California 90071<br>
       <a id="footerTerms" href="/terms" rel="nofollow">Terms &amp; Conditions</a>&nbsp;|&nbsp;
       <a id="footerPrivacy" href="/privacy" rel="nofollow">Privacy Policy</a>&nbsp;
       <br><br>
-      <a id="footerParking" href="http://www.aboutairportparking.com" target="_blank">Airport Parking</a>&nbsp;|&nbsp;
       <a id="footerTracker" href="http://www.flightview.com" target="_blank">Flight Tracker</a>&nbsp;
       <br><br>
       * Lowest price found online for one way airfare based on round-trip purchase. Not available from all cities or for all dates. <br> Taxes and additional fees may apply.
@@ -552,12 +551,12 @@ NREUMQ.push(["load",new Date().getTime()]);
 var e=document.createElement("script");
 e.type="text/javascript";
 e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "rpm-images.newrelic.com/42/eum/rum.js";
+  "js-agent.newrelic.com/nr-100.js";
 document.body.appendChild(e);
 if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-1.newrelic.com","064495816c","1197061","cl9eQhYKCg0AQUpeDkZWUUQBFkkVF1ITVw1uQlVFCxAUAgBASlEMQm9AVwMA",0,44,new Date().getTime(),"","","","",""]);</script>
+NREUMQ.push(["nrfj","beacon-3.newrelic.com","064495816c","1197061","cl9eQhYKCg0AQUpeDkZWUUQBFkkVF1ITVw1uQlVFCxAUAgBASlEMQm9AVwMA",0,20,new Date().getTime(),"","","","",""]);</script>
 
-<script type="text/javascript" src="https://rpm-images.newrelic.com/42/eum/rum.js"></script></body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
