--- a/l/li/lib/libman.com.html
+++ b/l/li/lib/libman.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the libman.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621102639id_/http%3A//www.libman.com/privacy-policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the libman.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220131738id_/http%3A//libman.com/privacy-policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="viewport" content="width=960"><meta name="description" content="Welcome to the Libman Company website! For over 114 years, the Libman family has made quality their utmost priority."><title>
 	Libman® Privacy Policy
@@ -75,9 +75,9 @@
 	    	<a href="http://www.youtube.com/user/libmancompany" target="_blank"><div id="youtube"></div></a>
 	    	-->
 	    	<ul id="reflection">
-	    		<li class="button-color-1"><a href="https://twitter.com/libmancompany" target="_blank"></a><span></span></li>
-	    		<li class="button-color-2"><a href="https://www.facebook.com/libmancompany" target="_blank"></a><span></span></li>
-	    		<li class="button-color-3"><a href="http://www.youtube.com/user/libmancompany" target="_blank"></a><span></span></li>
+	    		<li class="button-color-1"><a href="https://twitter.com/libmancompany" target="_blank"></a></li>
+	    		<li class="button-color-2"><a href="https://www.facebook.com/libmancompany" target="_blank"></a></li>
+	    		<li class="button-color-3"><a href="http://www.youtube.com/user/libmancompany" target="_blank"></a></li>
 	    	</ul>
 	    </div>
 		<div id="mydroplinemenu" class="droplinebar">
@@ -85,7 +85,7 @@
 		<a class="navLink" href="/"><li style="cursor:pointer;">Home</li></a>	
 		<a class="navLink" href="company.aspx"><li style="cursor:pointer;">Company </li></a>
 		<li>Products
-		  <ul style="display: none; visibility: visible; width: 650px;">
+		  <ul>
 		  <li><a href="products.aspx#/Mopping/">Medium Duty</a></li>
 		  <li><a href="products-highpower.aspx#/Mops/">Heavy Duty</a></li>
 		  <li><a href="locator.aspx">Where to Buy</a></li>
