--- a/s/sm/sma/smartthings.com.html
+++ b/s/sm/sma/smartthings.com.html
@@ -1,81 +1,86 @@
-<!--The following is the downloaded HTML source of the smartthings.com privacy policy that was archived on 2013-05-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130531105840id_/http%3A//smartthings.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smartthings.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220142336id_/http%3A//smartthings.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en"><!--<![endif]--><head>
-		<meta charset="utf-8">
-		<title>SmartThings - Privacy</title>
-		<meta name="viewport" content="initial-scale=1">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<link href="../img/favicon.ico" rel="shortcut icon">
-		<link href="../img/apple-touch-icon.png" rel="apple-touch-icon">
+<!DOCTYPE html><html lang="en"><!-- <![endif] --><head>
+  <title>SmartThings' Privacy Policy</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1" name="viewport">
+  <!-- %link{:href => "http://fast.fonts.com/cssapi/f071159a-5a11-4ca2-bf3c-413c52488dbf.css", :rel => "stylesheet", :type => "text/css"} -->
+  <link href="/images/iconography/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+  <link href="https://fast.fonts.net/cssapi/83265cb4-cc05-463e-8242-0d7650066aa8.css" rel="stylesheet" type="text/css">
+  <link href="/stylesheets/site-interior.css" media="screen" rel="stylesheet" type="text/css">
+  <!--[if lt IE 9]>
+  <script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script>
+  <![endif]-->
+  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//d2vig74li2resi.cloudfront.net/rum/bacon.min.js"></script><script src="/javascripts/lib/jquery-2.0.3.js"></script>
+  <script src="/javascripts/bootstrap.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/javascripts/modules/navigation.js"></script>
+   <script type="text/javascript">
+	  var BACON = BACON || {};
+	  BACON.id = 'DL0CMhpOQv6kZd6c';
+	  BACON.starttime = new Date().getTime();
+	  (function(d, s) { var js = d.createElement(s);
+	      js.async = true; js.src = "//d2vig74li2resi.cloudfront.net/rum/bacon.min.js";
+	      var s = d.getElementsByTagName(s)[0]; s.parentNode.insertBefore(js, s);
+	  })(document, "script");
+	</script>
+</head>
 
-		<!-- Stylesheets -->
-		<link href="../css/application.css" rel="stylesheet" type="text/css">
+<body class="interior">
+<!-- START HEADER -->
+<header>
+  <div class="container">
+    <div class="row">
+      <figure class="logo col-md-3 col-sm-3 col-xs-6 middle-align">
+        <a href="/"><img class="vertically-centered" src="/images/logo-circle-horizontal.png"></a>
+      </figure>
+      <div class="dashboard col-xs-6">
+        <div class="shop middle-align">
+          <a class="vertically-centered" href="http://shop.smartthings.com">Shop</a>
+        </div>
+        <div class="menu-trigger middle-align">
+          <img class="vertically-centered" src="/images/iconography/menu-stack.png">
+        </div>
+      </div>
+      <div class="header-nav-wrapper">
+        <nav class="main-nav col-md-6 col-sm-6">
+          <ul class="inline-list">
+            <li class="explore">
+              <a href="/explore">Explore</a>
+            </li>
+            <li class="app">
+              <a href="/app/">App</a>
+            </li>
+            <li class="shop">
+              <a href="http://shop.smartthings.com">Shop</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="header-subnav col-md-3 col-sm-3">
+          <ul class="inline-list">
+            <li class="blog">
+              <a href="http://blog.smartthings.com">Blog</a>
+            </li>
+            <li class="developers">
+              <a href="/build/">Developers</a>
+            </li>
+            <li class="support">
+              <a href="https://support.smartthings.com">Support</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
+<!-- END HEADER -->
 
-		<!-- JavaScripts -->
-		<!--[if lt IE 9]>
-			<script src="../js/html5shiv.js" type="text/javascript"></script>
-		<![endif]-->
-		<script src="https://static.woopra.com/js/woopra.js" type="text/javascript" async=""></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="../js/application-ck.js"></script>
-	</head>
-	<body class="subpage about">
-
-		<header class="header-main">
-			<div class="container">
-				<div class="gradient-top-bar"></div>
-				<div class="inner-wrap clearfix">
-					<a href="#newsletter-modal" class="login-tab fancybox"><strong>Sign up</strong> to stay up to date.</a>
-					<h1>
-						<a href="/" class="logo">
-							<img src="../img/smartthings-logo.png" alt="smartthings logo">
-							<span>SmartThings</span>
-						</a>
-					</h1>
-					<div class="separator"></div>
-					<nav class="pull-left clearfix">
-						<ul class="ul-reset ul-float">
-							<li><a href="/about/">About</a></li>
-							<li><a class="fancybox iframe reserve-my-spot" href="http://smartthings.com/reserve-my-spot/">Reserve</a></li>
-							<li><a href="/build/">Build</a></li>
-							<li><a href="http://support.smartthings.com">Support</a></li>
-						</ul>
-					</nav>
-
-					<ul class="social-links ul-reset ul-float clearfix">
-						<li>
-							<a href="http://twitter.com/smartthings" target="_blank" class="twitter">
-								<div class="top"></div>
-								<div class="bottom"></div>
-							</a>
-							<a href="http://www.facebook.com/smartthings" class="facebook">
-								<div class="top"></div>
-								<div class="bottom"></div>
-							</a>
-							<a href="mailto:info@smartthings.com?subject=Email%20from%20SmartThings.com" target="_blank" class="email">
-								<div class="top"></div>
-								<div class="bottom"></div>
-							</a>
-						</li>
-					</ul>
-					<div class="mobile-menu-icon"><div><div></div></div></div>
-				</div>
-			</div>
-		</header>
-
-		<div class="mobile-menu">
-			<ul class="ul-reset">
-				<li><a href="/about/">About</a></li>
-				<li><a class="fancybox iframe reserve-my-spot" href="http://smartthings.com/reserve-my-spot/">Reserve</a></li>
-				<li><a href="/build/">Build</a></li>
-							<li><a href="http://support.smartthings.com">Support</a></li>
-				<li><a href="#newsletter-modal" class="fancybox">Sign up</a></li>
-			</ul>
-		</div>
-
-		<section class="content-main">
-			<div class="inner-wrap">
-				<div class="padding-wrap">
-					<h3 class="heading">Privacy</h3>
+<div class="section">
+  <section class="content-head">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+					<h1 class="heading">Privacy</h1>
 					<div class="separator"></div>
 					<p><em>Effective Date: March 6, 2013</em></p>
 					<p>We at SmartThings know you care about how your personal information is used and shared, and we take your privacy seriously.&nbsp; Please read the following to learn more about our Privacy Policy.&nbsp; <strong>By using or accessing the Services in any manner, you acknowledge that you accept the practices and policies outlined in this Privacy Policy, and you hereby consent that we will collect, use, and share your information in the following ways.</strong> </p>
@@ -133,82 +138,127 @@ We endeavor to protect the privacy of your account and other Personal Informatio
 					<p align="left"><em>Effective Date: March 6, 2013</em></p>
 				</div>
 			</div>
-		</section>
-
-		<footer class="footer-main">
-			<div class="inner-wrap">
-				<nav>
-					<ul class="ul-reset ul-inline">
-						<li><a href="/about/">About</a></li>
-						<li><a href="/build/">Build</a></li>
-						<li><a href="/news/open-physical-graph.html">News</a></li>
-						<li><a href="/privacy/">Privacy</a></li>
-						<li><a href="mailto:info@smartthings.com">Contact</a></li>
-						<li><a href="http://support.smartthings.com">Support</a></li>
-					</ul>
-				</nav>
-				<div class="separator"></div>
-				<div class="copyright">© 2013 Physical Graph Corporation, All Rights Reserved.</div>
-			</div>
-		</footer>
-
-		<div class="noshow" style="display:none;">
-			<div id="newsletter-modal">
-				<div class="body">
-					<div id="emw-label">Enter your email to receive SmartThings launch updates and product details.</div>
-					<br>
-					<div><div rel="LY465G4F" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="smartthings.com" data-css=""></div></div>
-				</div>
-			</div>
 		</div>
+	</section>
+</div>			
 
-		<script type="text/javascript" src="../js/retina.js"></script>
-		<script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
-		<script type="text/javascript">
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-33946687-1']);
-			_gaq.push(['_setDomainName', 'smartthings.com']);
-			_gaq.push(['_setAllowLinker', true]);
-			_gaq.push(['_trackPageview', location.pathname + location.search + location.hash]);
-			(function() {
-				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-		</script>
-		<script type="text/javascript">
-			/* <![CDATA[ */
-			var google_conversion_id = 1005139460;
-			var google_conversion_label = "2QfNCKTbngMQhOyk3wM";
-			var google_custom_params = window.google_tag_params;
-			var google_remarketing_only = true;
-			/* ]]> */
-		</script>
-		<div style="display:none;">
-			<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
-		</div>
-		<noscript>
-			<div style="display:inline;">
-				<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1005139460/?value=0&amp;label=2QfNCKTbngMQhOyk3wM&amp;guid=ON&amp;script=0"/>
-			</div>
-		</noscript>
-		<!-- Start of Woopra Code -->
-		<script type="text/javascript">
-			function woopraReady(tracker) {
-				tracker.setDomain('smartthings.com');
-				tracker.setIdleTimeout(300000);
-				tracker.track();
-				return false;
-			}
-			(function() {
-				var wsc = document.createElement('script');
-				wsc.src = document.location.protocol+'//static.woopra.com/js/woopra.js';
-				wsc.type = 'text/javascript';
-				wsc.async = true;
-				var ssc = document.getElementsByTagName('script')[0];
-				ssc.parentNode.insertBefore(wsc, ssc);
-			})();
-		</script>
-		<!-- End of Woopra Code -->
-	
+<!-- START FOOTER -->
+<div class="section footer">
+  <footer>
+    <div class="container">
+      <div class="row">
+        <nav class="site-nav col-md-3 clearfix">
+          <h3>Company Info</h3>
+          <ul class="list-unstyled pull-left">
+            <li><a href="/about/">About</a></li>
+            <li><a href="/news/">News</a></li>
+          </ul>
+          <ul class="list-unstyled">
+            <li><a href="/about/media/">Media Kit</a></li>
+            <li><a href="/about/jobs/">Jobs</a></li>
+          </ul>
+        </nav>
+        <div class="contact col-md-4 col-md-offset-1">
+          <h3>Contact Info</h3>
+          <ul class="list-unstyled">
+            <li>
+              PR:
+              <a href="mailto:pr@smartthings.com">pr@smartthings.com</a>
+            </li>
+            <li>
+              Partnerships:
+              <a href="mailto:partnerships@smartthings.com">partnerships@smartthings.com</a>
+            </li>
+            <li>
+              Everything else:
+              <a href="mailto:info@smartthings.com">info@smartthings.com</a>
+            </li>
+          </ul>
+          <address>
+            <h5>HEADQUARTERS</h5>
+            1000 Potomac St. NW, Suite 120<br>
+            Washington DC, 20007<br>
+          </address>
+        </div>
+        <div class="subscription col-md-4">
+          <h3>News and Updates</h3>
+          <p>Get exclusive deals, events, and news (not spam):</p>
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="http://smartthings.us5.list-manage2.com/subscribe/post?u=fc865295de6f052023cd22d39&amp;id=c931d95c69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+              <div class="mc_st_form">
+                <input type="email" value="" name="EMAIL" class="email" style="border: none; box-shadow: none;" id="mce-EMAIL" placeholder="email address" required="">
+                <input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe-button">
+              </div>
+            </form>
+          </div>
+          <!--End MailChimp Signup Form-->
+          <div class="social">
+            <ul class="inline-list list-unstyled">
+              <li><a class="social-twitter" href="http://twitter.com/smartthings" target="_blank">Twitter</a></li>
+              <li><a class="social-facebook" href="http://facebook.com/smartthings" target="_blank">Facebook</a></li>
+              <li><a class="social-youtube" href="http://www.youtube.com/user/mySmartThings" target="_blank">YouTube</a></li>
+              <li><a class="social-flickr" href="http://www.flickr.com/groups/2330048@N23/pool/" target="_blank">Flickr</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="footer-subnav col-md-5">
+          <ul class="inline-list list-unstyled">
+            <li><a href="/explore/">Explore</a></li>
+            <li><a href="/app/">App</a></li>
+            <li><a href="https://shop.smartthings.com/">Shop</a></li>
+            <li><a href="http://blog.smartthings.com">Blog</a></li>
+            <li><a href="/build/">Developers</a></li>
+            <li><a href="https://support.smartthings.com">Support</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="legal col-md-8">
+          <p>© 2013 Physical Graph Corporation. All Rights Reserved.</p>
+          <ul class="inline-list">
+            <li><a href="/terms/">Terms of Use</a></li>
+            <li>|</li>
+            <li><a href="/privacy/">Privacy Policy</a></li>
+          </ul>
+          <p>SmartThings; SmartApps; Physical Graph; Hello, Home; and Hello, Smart Home are all trademarks of the Physical Graph Corporation.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
+<!-- END FOOTER -->
+
+<script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-33946687-1']);
+      _gaq.push(['_setDomainName', 'smartthings.com']);
+      _gaq.push(['_setAllowLinker', true]);
+      _gaq.push(['_trackPageview', location.pathname + location.search + location.hash]);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    <script type="text/javascript">
+      /* <![CDATA[ */
+      var google_conversion_id = 1005139460;
+      var google_conversion_label = "2QfNCKTbngMQhOyk3wM";
+      var google_custom_params = window.google_tag_params;
+      var google_remarketing_only = true;
+      /* ]]> */
+    </script>
+    <div style="display:none;">
+      <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
+    </div>
+    <noscript>
+      <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1005139460/?value=0&amp;label=2QfNCKTbngMQhOyk3wM&amp;guid=ON&amp;script=0"/>
+      </div>
+    </noscript>
+
+
 </body></html>
